--- a/css/style.css
+++ b/css/style.css
@@ -19,4 +19,62 @@ body {
   min-height: 100vh;
   flex-direction: column;
   justify-content: space-between;
+  background-image: url(../img/bg.jpg);
+  background-size: cover;
+  font-family: 'Sixtyfour', sans-serif;
+  font-size: 1.5em;
+  color: #f8f5f5;
+}
+
+.header,
+footer {
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(24, 216, 216, 0.575);
+}
+
+.container {
+  max-width: 1440px;
+  padding: 0 20px;
+  margin: 0 auto;
+}
+
+.keys__title {
+  font-size: 1em;
+  text-align: center;
+  max-width: 800px;
+  margin: 50px auto;
+  border-bottom: 4px solid rgb(122, 55, 55);
+  padding: 20px;
+  background-color: rgba(24, 216, 216, 0.575);
+}
+
+.keys__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  max-width: 590px;
+  margin: 0 auto;
+  gap: 30px;
+  padding-top: 50px;
+}
+
+.keys__item {
+  width: 60px;
+  height: 60px;
+  background-color: rgba(158, 24, 17, 0.808);
+  padding: 15px;
+  border-radius: 5px;
+  transition: all .8s ease-in;
+  cursor: pointer;
+}
+
+.keys__item:hover {
+  background-color: rgba(93, 233, 65, 0.729);
+  color: #383737;
+}
+
+.keys__kilcked {
+  background-color: rgba(93, 233, 65, 0.729);
+  color: #383737;
 }
