--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ footer {
 
 .keys__title {
   font-size: 1em;
+  text-transform: uppercase;
   text-align: center;
   max-width: 800px;
   margin: 50px auto;
@@ -53,28 +54,29 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  max-width: 590px;
+  max-width: 650px;
   margin: 0 auto;
-  gap: 30px;
-  padding-top: 50px;
+  gap: 50px;
+  padding: 50px 0;
 }
 
 .keys__item {
-  width: 60px;
-  height: 60px;
   background-color: rgba(158, 24, 17, 0.808);
-  padding: 15px;
+  padding: 20px;
   border-radius: 5px;
   transition: all .8s ease-in;
   cursor: pointer;
+  text-transform: uppercase;
 }
 
 .keys__item:hover {
-  background-color: rgba(93, 233, 65, 0.729);
   color: #383737;
+  transform: scale(1.2);
+  box-shadow: 0px 0px 10px rgba(99, 3, 255, 0.842);
 }
 
 .keys__kilcked {
-  background-color: rgba(93, 233, 65, 0.729);
   color: #383737;
+  transform: scale(1.2);
+  box-shadow: 0px 0px 10px rgba(99, 3, 255, 0.842);
 }
